--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "build": "vite build"
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
